--- a/VV556/HW1/submission.tex
+++ b/VV556/HW1/submission.tex
@@ -95,18 +95,9 @@
 			\end{aligned}
 			\right.
 		\end{equation}
-		It's of uniform convergence as
+		It's not of uniform convergence as
 		\begin{equation}
-			\begin{aligned}
-				&  \lim\limits_{n\rightarrow\infty} \sup_{x\in[0, 1]} |f_n(x) - f(x)|\\
-				&=\left\{
-					\begin{aligned}
-						&0,  &x=0\\ 
-						&\lim\limits_{x\rightarrow 0,  n \rightarrow \infty} |x^{\frac{1}{n}} - 1|, & x \in (0, 1]
-					\end{aligned}
-					\right.\\
-				&=0
-			\end{aligned}
+			\sup_{x\in[0, 1]} |f_n(x) - f(x)| = 1
 		\end{equation}
 	\item 
 		The pointwise limit is given as
