--- a/VV556/HW5/submission.tex
+++ b/VV556/HW5/submission.tex
@@ -49,7 +49,7 @@
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
-\author{Yu Cang \\ 018370210001} % Your name
+\author{Yu Cang \quad 018370210001\\ Zhiming Cui \quad 017370910006} % Your name
 
 \date{\normalsize \today} % Today's date or a custom date
 
