--- a/VM524/HW2/submission.tex
+++ b/VM524/HW2/submission.tex
@@ -57,7 +57,7 @@
 \section{Exercise1}
 	Consider the N-S equation
 	\begin{equation}
-		\frac{\partial u_j}{\partial t} + u_k \frac{\partial u_j}{\partial x_k} = -\frac{1}{\rho}\frac{\partial p}{\partial x_j} + \nu \frac{\partial^2 u_j}{\partial x_k \partial x_k} + f_j = 0
+		\frac{\partial u_j}{\partial t} + u_k \frac{\partial u_j}{\partial x_k} = -\frac{1}{\rho}\frac{\partial p}{\partial x_j} + \nu \frac{\partial^2 u_j}{\partial x_k \partial x_k} + f_j
 	\end{equation}
 	
 	With the ensemble average, each quantity can be decomposed into mean and fluctuation. Namely
